2009-06-04
	* src/prompter.c(_pam_krb5_generic_prompter): if the prompt looks
	like a password prompt, use "Password: " instead

2009-05-27
	* src/auth.c(pam_sm_authenticate): if we need to be the module that
	asks for a password, do so before sanity checking things like whether
	or not the user name is valid (#502602)
	* src/auth.c(pam_sm_authenticate),
	src/prompter.c(_pam_krb5_generic_prompter): only allow libkrb5 to
	ask for a password if we weren't supplied with one and didn't ask for
	one ourselves

2009-03-04
	* src/initopts.c(_pam_krb5_set_init_opts_for_pwchange): add, for
	setting options which are appropriate for obtaining password-changing
	credentials
	* src/v5.c: use temporary-for-pwchange opts when we try to get
	password-changing creds as a way to check that an expired password
	is correct.
	* src/password.c: use temporary-for-pwchange opts when we try to get
	password-changing creds as a way to check that an expired password
	is correct.

2009-02-11
	* src/options.c(_pam_krb5_options_init): don't log ticket and
	renew lifetimes of 0, which we interpret as "let the library use
	its settings" anyway

2009-02-06
	* src/kuserok.c(_pam_krb5_kuserok): close the read end of the
	pipe that's used to gather the child's result (Dan Walsh)
	* src/storetmp.c(_pam_krb5_storetmp_data): close the write end
	of the pipe to the child if we encounter an error writing to it
	(Dan Walsh)

2009-02-05
	* src/minikafs.c: remove minikafs_realm_of_cell(), which is not
	used anywhere
	* src/minikafs.c(minikafs_4log): pass the locally-initialized
	context to minikafs_realm_of_cell_with_context() rather than the
	passed-in value, so that minikafs_realm_of_cell_with_context()
	can skip the init call if we're passed NULL

2008-10-29
	* src/password.c (pam_sm_chauthtok): if the "use_shmem" option is
	set, stash the credentials which we obtain after a password change
	in shared memory as well.  Based on patch from and initial report
	by Michael Calmer.

2008-10-16